[package]
name = "parse_interval"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Pulau-Komodo/parse_interval"
keywords = ["time", "duration", "interval", "parsing"]
categories = ["command-line-interface", "date-and-time", "parser-implementations"]
description = "Parse text with a specific format into a time interval."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
regex = { version = "1.10.3", default_features = false, features = ["std", "perf", "unicode-case"]}
thiserror = "1.0.56"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "date_benchmark"
harness = false
